--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <head>
 	<title>Happy Birthday</title>
 	<meta charset="UTF-8" />
-	<meta name="description" content="Happy Birthday Xola">
+	<meta name="description" content="Happy Birthday NOOR">
 	<meta name="robots" content="index, follow" />
 	<link rel="author" href="https://plus.google.com/u/1/+AyushSharma1/" /> 
     <meta name="keywords" content="Birthday, Happy">
@@ -112,7 +112,7 @@
 				<p><strong>however</strong></p>
 				<p>Do you know..?</p>
 				<p>today is just special</p>
-				<p>so special to you</p>
+				<p>so special to us</p>
 				<p>that's why</p>
 				<p>Let's make it...</p>
 				<p>the best celebration ever</p>
@@ -121,7 +121,7 @@
 				<p>I made all this...</p>
 				<p>as a birthday present to you</p>
 				<p>thanks for being there</p>
-				<p>thanks for the friendship we made</p>
+				<p>thanks for the everything</p>
 				<p>thanks for everything</p>
 				<p>I wish you all the best</p>
 				<p>May your life be at ease</p>
@@ -150,7 +150,7 @@
 				<p>and make it the best memory..</p>
 				<p>lastly...</p>
 				<p>I'd like to wish you one more time</p>
-				<p>a very happy birthday Xola Mathembisa</p>
+				<p>a very happy birthday NOOR</p>
 			</div>
 		</div>
 		<div class="navbar navbar-fixed-bottom">
@@ -160,7 +160,7 @@
 					<button class="btn btn-primary" id="play">Play Music</button>
 					<button class="btn btn-primary" id="bannar_coming">Let's Decorate</button>
 					<button class="btn btn-primary" id="balloons_flying">Fly With Balloons</button>
-					<button class="btn btn-primary" id="cake_fadein">Most Delicious Cake Ever</button>
+					<button class="btn btn-primary" id="cake_fadein">Most Delicious Chocolate Cake Ever</button>
 					<button class="btn btn-primary" id="light_candle"> Light Candle</button>
 					<button class="btn btn-primary" id="wish_message">Happy Birthday</button>
 					<button class="btn btn-primary" id="story">A mesage for you</button>
